$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-19 (opened December 18, 2010)

	* new version opened with the release of vegan 1.17-5 (submitted
	Dec 17, 2010, released at CRAN on on Dec 18, 2010).

	* metaMDS: function was written for community data with all
	entries non-negative, but it is used increasingly often with other
	data types with a risk of failure (especially in wascores()). Now
	data are checked for negative entries, and arguments wascores,
	autotransform and noshare are set to FALSE with negative data
	entries. Triggered by email queries and problem reports.

Version 1.18-18 (closed December 17, 2010)

	* mantel.correlog: proper treatment of ties in permutation
	statistics. Function uses mantel() to evaluate p-values, and this
	uses one-sided test. If the statistic is negative, the test
	direction is reversed, but then p-value cannot be directly
	complemented if there are ties: the observed statistic must be
	switchec to another side of the tied block. Therefore
	mantel.correlog() now evaluates the p-value directly in reversed
	test.

	* nestedtemp: updated the literature reference to Almeida-Neto &
	Ulrich (2011).

	* vegdist.Rd: fixed legends to Gower indices and checked binary
	formualations (ok).

	* vegan-package.Rd: added a package intro file (to be merged to
	the release version 1.17-5).

	* sipoo.rda: got island names, and decision-vegan.Rnw vignette was
	changed accordingly.

	* ordistep: Pierre Legendre's edits of the help page.

	* prc: got back the formula interface and with that the na.action
	lost in r1356 (9 Nov, 2010).

	* plot.procrustes: user can select the direction of the arrow with
	argument 'to.target', and the 'type' of the plot. With 'type =
	"text"', ordilabel() is used to mark the tails of the arrows.

	* plot.betadisper: would fail when plotting anything other than
	axes 1 and 2. Now fixed and an example included in the Rd file to
	make sure this doesn't happen again. Reported by Sarah Goslee.
