@@ -7,6 +7,9 @@ Version 1.18-19 (opened December 18, 2010)
 	* new version opened with the release of vegan 1.17-5 (submitted
 	Dec 17, 2010, released at CRAN on on Dec 18, 2010).
 
+	* CCorA: Pierre Legendre's minor fixes, including scaling of
+	scores Cy an Cx, and removing requirement of MASS.
+
 	* metaMDS: function was written for community data with all
 	entries non-negative, but it is used increasingly often with other
 	data types with a risk of failure (especially in wascores()). Now
